<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWeather</string>
    <string name="action_settings">Settings</string>
    
    <string name="default_area">--</string>
    <string name="default_time">00:00</string>
    <string name="default_date">default_date</string>
    <string name="default_temp">--°</string>
    <string name="default_weather">--</string>

    
    <!-- format strings for clocks -->
    <string name="clock_24_hours_format" translatable="false">kk&#58;mm</string>
    <string name="main_widget_12_hours_format" translatable="false">h&#58;mm</string>
    
    <string-array name="settings_array_notification_smallicon">
        <item>天气状况</item>
        <item>温度</item>
    </string-array>
    <string-array name="settings_array_notification_textcolor">
        <item>系统默认</item>
        <item>白色</item>
        <item>黑色</item>
    </string-array>
    
    <!-- <TextClock
            android:layout_toRightOf="@id/notification_temprature"
            android:layout_marginLeft="50dp"
            android:id="@+id/the_clock"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format12Hour="@string/main_widget_12_hours_format"
            android:format24Hour="@string/clock_24_hours_format"
            android:singleLine="true"
            android:textColor="@color/w_text_primary"
            android:textSize="18dp" /> -->

    <string name="or_login_with">Or Login with</string>
    <string name="click_here_to_sign_up">Didn\'t created account? Click here to sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_here_to_login">Already signed up? Click here to login.</string>
    <string name="or_sign_up_with">Or sign up with</string>

    <string name="default_web_client_id">312650560177-pk3f3piuu40i03imdg66i93399s0ftuj.apps.googleusercontent.com</string>


</resources>
